<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLighterGrey"
    android:fitsSystemWindows="true"
    tools:context=".DetailPageActivity">

    <!-- APP TITLE -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppTitleOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:src="@drawable/back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showAsAction="always" />

                <TextView
                    android:id="@+id/title_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/app_result"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/shareFB"
                    app:layout_constraintStart_toEndOf="@+id/back_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/shareFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showAsAction="always" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabIndicatorColor="@color/colorTabIndicator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar_details">

            <android.support.design.widget.TabItem
                android:id="@+id/item_detail_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/product_icon"
                android:text="@string/tab_detail_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/item_detail_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/shipping_icon"
                android:text="@string/tab_detail_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/item_detail_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/photos_icon"
                android:text="@string/tab_detail_3" />

            <android.support.design.widget.TabItem
                android:id="@+id/item_detail_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/similars_icon"
                android:text="@string/tab_detail_4" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="wrap_content"
        android:layout_height="310dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/waiting_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/app_waiting"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.IconMenu.Item"
        android:textColor="@color/colorDarkerGrey"
        app:layout_anchor="@+id/progress_detail"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.view.ViewPager
        android:id="@+id/content_detail"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAlignment="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/detail_wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/add_to_wishlist2"
        app:backgroundTint="@color/colorTextFirst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>